# evetac_software

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
calibration/: calibrate.py
calibration/calibrations/: base_calibration.pkl
config/: ebcam_readout_node.yaml  ebcam_tracking_visualization_node.yaml
ebcam-readout/: track_dots_ros.py
ebcam-visualize/: pictorial_event_processing_w_initial_point_locations.py
launch/: ebcam_readout.launch  ebcam_tracking_visualization.launch  event_visualization_calibration.launch
msg/: EvetacMsg.msg  RobotisGripper.msg
utils/: __init__.py  camera_utils.py  dot_tracking_utils.py  image_generation_util.py
